update BF 1001 for F21 (v3.7i)

--- a/BF/BF 1001-Driver 2021.tex
+++ b/BF/BF 1001-Driver 2021.tex
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 \onlinetrue % \Int{true}{false}
-\coursecode[3.6]{BF 1001}
+\coursecode[3.7]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -37,28 +37,28 @@
 %   - Fall 2017
 %   - Fall 2017(Int - online section run parallel to campus course)
 %   - Fall 2018
-%   - Winter 2020(Int)
-%   - Fall 2020 (not scheduled Int, but driven online by Covid-19)
+%   - Winter 2020(Int) - Nate Wall helped as TA
+%   - Fall 2020 - not scheduled Int, but driven online by Covid-19
+%   - Fall 2021(Int)
 
 \professor{Daniel R. Driver}
-\phone{902-222-0930}
+\phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours[Microsoft Teams]{Thursdays, 1:00--3:00 \PM}
+\officehours[Microsoft Teams]{Tuesdays, 1:00--3:00 \PM}
 
-\semester{Fall Term 2020}
-\meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
+\semester{Fall Term 2021}
+\meets{\Int{Mondays}{Thursdays}}% \meets{on}{at}{in}
       {1:00--3:30 \PM}% if online, it prints "From 9:00 AM"
       {Classroom 3}% if online, it prints "Brightspace" with link
 \website{danieldriver.com}
 \cdescription[none. The course is required for HB courses at or above the 3000-level. It is open to Continuing Education participants]{% copy from the current Academic Calendar; [] for prereqs
-	The First Testament of Christian Scripture, also called the Hebrew
-	Bible or Old Testament, is a fundamental part of Christian tradition
-	and durable rule of faith and practice. Students in this course will
-	therefore be introduced to historical and literary data important
-	for understanding the origins of the Hebrew Bible and its subsequent
-	function as Scripture in a variety of cultural and religious
-	contexts. The outlook will be broadly ecumenical, with case studies
-	that exemplify Jewish and Christian interpretation.
+	The First Testament of Christian Scripture is a fundamental part of
+	Christian tradition and durable rule of faith and practice. Students in
+	this course will be introduced to historical and literary data important
+	for understanding the origins of the Hebrew Bible/Old Testament and its
+	subsequent function as scripture in a variety of contexts. The outlook
+	will be broadly ecumenical, with case studies that exemplify Jewish and
+	Christian interpretation.
 
 	The broad sweep of biblical tradition will be presented through a
 	survey of representative books from the Law, the Prophets, and the
@@ -91,8 +91,8 @@
 	individual attitudes and assumptions. They should be able to extend
 	their awareness of the Bible's contemporary readers to the Bible's
 	long history of reception. Finally, students should begin to infer
-	what Jesus meant in speaking of ``the law of Moses, the prophets,
-	and the psalms'' (Luke 24:44), and so learn to hear claims about New
+	what Jesus meant in speaking of “the law of Moses, the prophets,
+	and the psalms” (Luke 24:44), and so learn to hear claims about New
 	Testament fulfilment of scripture in light of the unique voice that
 	the Old Testament retains along side of the New in Christian
 	Scripture.
@@ -161,11 +161,11 @@ will not want to miss their hermeneutical and theological insights.
 If you are looking to build your biblical studies library, I recommend
 Konrad Schmid's \emph{A Historical Theology of the Hebrew Bible}
 \cite{ks19} for a recent introduction to critical scholarship that goes
-beyond \cite{hbfb}. Brevard Childs \cite{bc79, bc92} remain useful, too.
-Also, the following reference works are worth owning and consulting.
-\cite{rlgs} in particular contains sound advice on core skills like
-reading religious texts, writing essays and reviews, revising essays,
-making oral presentations, and learning languages.
+beyond \cite{hbfb}. Brevard Childs \cite{bc79, bc92} remains useful,
+too. Also, the following reference works are worth owning and
+consulting. \cite{rlgs} in particular contains sound advice on core
+skills like reading religious texts, writing essays and reviews,
+revising essays, making oral presentations, and learning languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -205,28 +205,28 @@ the needs of the class.
 
 	\unit{Law / Torah / Pentateuch} \\
 
-		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{10}{} Sep. \\
-		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{17}{} Sep. \\
-		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{24}{} Sep. \\
-		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{ 1}{} Oct. \\
-		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{ 8}{} Oct. \\
-	\reminder{A first short paper is \textbf{due} by the end of the sixth week of class}{15 Oct.}    \\ [1ex]
+		& Genesis 1--11        & \HBFB{1--26}    & Davis \cite{ed03}, Seitz  \cite{cs96} & \Int{13}{} Sep. \\
+		& Genesis 12--50       & \HBFB{27--64}   & Levenson                  \cite{jl12} & \Int{20}{} Sep. \\
+		& Exodus 1--34         & \HBFB{65--75}   & McGinnis                  \cite{cm12} & \Int{27}{} Sep. \\
+		& Leviticus 1--16      & \HBFB{77--83}   & Anderson                  \cite{ga17} & \Int{ 4}{} Oct. \\
+	\noclass{Thanksgiving Monday: AST closed}                                            & \Int{11}{} Oct. \\
+	\noclass{Reading Week: No classes}                                                   & \Int{18}{} Oct. \\
+		& Deuteronomy          & \HBFB{85--99}   & \cite{heschel} or Moberly \cite{wm13} & \Int{25}{} Oct. \\
+	\reminder{A first short paper is \textbf{due} by the end of the fifth week of class}{25 Oct.}    \\ [1ex]% NB I moved this back from wk 6 to wk 5 because of the unusual two week break in F21. Perhaps move back to wk 6 next time.
 
 	\unit{Prophets: Former \textit{\&} Latter} \\
 
-		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{15}{} Oct. \\
-	\noclass{AST Reading Week}                                                           & \Int{22}{} Oct. \\
-		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{29}{} Oct. \\
-		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{ 5}{} Nov. \\
-%	\noclass{AST Closed on Monday}                                                       & \Int{2 }{} Nov. \\
-		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{12}{} Nov. \\
-		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{19}{} Nov. \\
-	\reminder{A second short paper is \textbf{due} by the end of the eleventh week of class}{26 Nov.}    \\ [1ex]
+		& Joshua, Judges       & \HBFB{103--121} & Trible                    \cite{pt84} & \Int{ 1}{} Nov. \\
+		& 1 \& 2 Samuel        & \HBFB{123--134} & Chapman                   \cite{sc16} & \Int{ 8}{} Nov. \\
+		& 1 \& 2 Kings         & \HBFB{135--143} & Alter                     \cite{ra81} & \Int{15}{} Nov. \\
+		& Isaiah 1--12, 36--40 & \HBFB{145--168} & \cite{irenaeus} or Davis  \cite{ed14} & \Int{22}{} Nov. \\
+		& Hosea--Jonah         & \HBFB{169--184} & Nogalski          \cite{jn07a, jn07b} & \Int{29}{} Nov. \\
+	\reminder{A second short paper is \textbf{due} by the end of the eleventh week of class}{6 Dec.}    \\ [1ex]
 
 	\unit{Writings: Wisdom \textit{\&} Praise} \\
 
-		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{26}{} Nov. \\
-		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{ 3}{} Dec. \\ [1ex]
+		& Psalms 1--8, 41, 51, 89–90 & \HBFB{187--202} & deClaissé-Walford  \cite{ndw14} & \Int{ 6}{} Dec. \\
+		& Ecclesiastes         & \HBFB{203--246} & Dell \cite{kd13} or Fox   \cite{mf04} & \Int{13}{} Dec. \\ [1ex]
 
 	\reminder{End of Term: Final marks are due for all courses}{16 Dec.} \\
 
@@ -260,8 +260,8 @@ The grade structure for \ccode has the following elements.
 	with the art of biblical interpretation. One is keyed to the
 	exposition of a model, the other to a short biblical text. Each
 	should be about 2,500 words in length. Either paper (your choice) is
-	due at the end of the sixth week of class; the other one is due at
-	the end of the eleventh week.
+	due at the end of the fifth week of class; the other one is due at
+	the end of the eleventh week.% NB I moved this back from wk 6 to wk 5 because of the unusual two week break in F21. Perhaps move back to wk 6 next time.
 
 	\begin{enumerate}
 
