--- a/BF/BF 1001-Driver 2021.tex
+++ b/BF/BF 1001-Driver 2021.tex
@@ -113,7 +113,7 @@
 
 The following texts are required. Students are strongly encouraged to
 purchase their own copies. Library copies that are not reference works
-have been placed on a 2-hour reserve.
+will be placed on a 2-hour reserve.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
