update policy to align with language from Dean's Office

--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,31 +1,41 @@
-\ProvidesFile{other.tex}[2019/12/10 v2.7 -- Course policy]
+\ProvidesFile{other.tex}[2021/09/07 v2.8 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
 
 Late work will not be accepted, except in genuinely extenuating
 circumstances. Students must submit something before the deadline if
-they wish to receive credit. Unless I state otherwise, written
-assignments are to be uploaded by 11:59 \PM\ on the date indicated\Int{,
-in whatever time zone you happen to be in}{}.
+they wish to receive credit. Unless I state otherwise, assignments are
+to be uploaded by 11:59 \PM\ (Atlantic) on the date indicated.
 
 Essay submissions must be typewritten, double-spaced, and formatted as
 PDFs. They should be free from error. In this course they should follow
 SBL Style (see \cite{sbl2} in \autoref{supplementary}, above). As a
 reminder, AST also upholds an Inclusive Language Policy.
 
-\href{http://www.eerdmans.com/Pages/Item/59043/Commentary-Statement.aspx}{Plagiarism},
-if \href{https://www.theguardian.com/world/2013/feb/09/german-education-minister-quits-phd-plagiarism}{detected},
-will result in failure of the course.
+Plagiarism is the
+\href{http://www.eerdmans.com/Pages/Item/59043/Commentary-Statement.aspx}{failure}
+to \href{https://www.theguardian.com/world/2013/feb/09/german-education-minister-quits-phd-plagiarism}{attribute}
+(by means of footnotes when writing or aloud when speaking) any ideas,
+phrases, sentences, materials, syntheses, et cetera, that another author
+has composed and that you have borrowed for your own work. Plagiarism is
+unethical. Academic penalties for plagiarism at AST are serious, and may
+include failure of the course or even suspension of further studies.
+Unintentional plagiarism is considered plagiarism. AST's Plagiarism
+Policy is found under that heading in the Academic
+Calendar.\footnote{This paragraph is adapted from standard language
+provided by the Academic Dean's office.}
 
 Students should request permission to record a class or lecture. If
 permission is granted, or if recordings are provided (as in the case of
-an online course), I stipulate that all recordings be for personal use
-only. They may not be shared or distributed.
+an online or hybrid course), I stipulate that all recordings be for
+personal use only. They may not be shared or distributed.
 
-If you have abilities or disabilities that require modifications to the
-assessment process or other aspects of this course, please advise the
-course instructor as soon as possible.
+If you have needs that require modifications to any aspect of this
+course, please consult with the instructor as soon as possible. Any
+documentation regarding disabilities that you wish to divulge to AST
+should be provided to the Registrar’s Office, where it will be kept in a
+confidential file.\footnotemark[1]
 
 Finally, I encourage the conscientious use of laptops, tablets, and
 other technology in my classes. In classroom settings, realize that, as
