change reading > writing prompts

--- a/HB/HB 3117-Creation.tex
+++ b/HB/HB 3117-Creation.tex
@@ -205,7 +205,7 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Reading prompts} will be given throughout the
+	\item \textbf{Writing prompts} will be given throughout the
 	semester. They are low-risk writing exercises designed to encourage
 	careful reading of the assigned material, and to help explore its
 	significance. Prompt responses are not marked, though points may be
