change reading > writing prompts

--- a/HB/HB 3117-Creation.tex
+++ b/HB/HB 3117-Creation.tex
@@ -292,7 +292,7 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts    & 20\% \\
+    Writing Prompts    & 20\% \\
     Review Essay       & 30\% \\
     Exegetical Essay   & 30\% \\
     Video Presentation & 20\% \\
