reading > writing prompt; update presentation length

--- a/BF/BF 1001-Driver 2021.tex
+++ b/BF/BF 1001-Driver 2021.tex
@@ -245,7 +245,7 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item \textbf{Reading prompts} will be given throughout the
+	\item \textbf{Writing prompts} will be given throughout the
 	semester. They are low-risk writing exercises designed to encourage
 	careful reading of the assigned material, and to help explore its
 	significance. Individual posts are not marked, though points may be
@@ -292,14 +292,17 @@ The grade structure for \ccode has the following elements.
 	\end{enumerate}
 
 \Int{
-	\item Each student will \textbf{make an online presentation} on one
-	of the twelve supplementary articles. Be creative! It may take the
-	form of a podcast or online video, and should be sharable by URL
-	(try SoundCloud, YouTube, or Vimeo). The presentation should last
-	15–20 minutes. It must begin with a brief (5~min) summary of the
-	article. The balance of the time should be spent helping other
-	readers elaborate, reflect on, test, challenge, or extend the main
-	ideas presented there.
+	\item One week, instead of answering a writing prompt, each student
+	will make an \textbf{online presentation} on one of the twelve
+	supplementary articles. Be creative! It may take the form of a
+	podcast or online video, and should be sharable by URL (try
+	SoundCloud, YouTube, or Vimeo). The presentation should last 8–10
+	minutes (12 min at most). It must begin with a brief (3–5~min)
+	summary of the article. The balance of the time should be spent
+	helping other readers elaborate, reflect on, test, challenge, or
+	extend the main ideas presented there. Post your link to the forums
+	by the morning so that you can help shape the forum discussions on
+	the same article.
 }{
 	\item Each student will lead a \textbf{seminar discussion} of one
 	chapter from the HB/OT, freely chosen from a week's primary reading.
@@ -322,7 +325,7 @@ The breakdown for the semester's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Prompts  & 25\% \\
+    Writing Prompts  & 25\% \\
     Review Essay     & 25\% \\
     Exegetical Essay & 25\% \\
     \Int{Online Presentation}{Seminar Discussion} & 25\% \\
