set Decalogue course for W22

--- a/ST-cross/HBST 3001-Doctrine and the OT.tex
+++ b/ST-cross/HBST 3001-Doctrine and the OT.tex
@@ -213,43 +213,46 @@ See the AST website for a list of other \href{http://www.astheology.ns.ca/studen
 \section{Evaluation and Grade Structure}
 \label{evaluation}
 
-\begin{enumerate}% 200*7+250*8 = 3400 words, plus the annotated articles
+Given the small class size this term, I have adopted a tutorial format
+for \ccode.
 
-	\item Before each class, complete the assigned reading and write a
-	200--250 word (one page) \textbf{reading response}. Use the exercise
-	to elaborate, reflect on, test, challenge, or extend an idea from
-	the reading that you find noteworthy. Type your responses, write in
-	complete sentences, and combine those sentences into one or two
-	healthy paragraphs. Due at the start of \textbf{each class}, unless
-	it is the first class or another graded assignment is due. Students
-	who submit fewer than 6 responses cannot earn an “A” for the course.
+\begin{enumerate}
 
-	\item On one sheet of paper, annotate a list of between 7 and 12
-	essential \textbf{articles of faith} that Christians associate with
-	Old Testament scripture. For guidance on what counts as “essential”
-	you may consult various catechisms (Catholic, Lutheran), creeds
-	(Apostles', Nicene, New), and other official documents (Articles,
-	Encyclicals, Statements). In your annotations, cite OT texts that
-	seem to speak to each of the doctrines you select, whether for or
-	against or both. Due at the start of \textbf{class four}.
+	\item Each week you will write a 1000–1200 word essay responding to
+	a prompt.
 
-	\item A \textbf{final paper} allows you to explore one Christian
-	Doctrine of your choice in terms of its relationship to Old
-	Testament scripture. The paper must have a clear thesis and be at
-	least 2,000 words (eight pages) long. It should interact with the
-	assigned reading and cite at least four secondary sources in total.
-	Due at the start of the \textbf{last class}.
+	\item Essays should interact thoughtfully with both primary and
+	secondary sources, and should be \textbf{thesis-driven}. Your essay
+	must argue a thesis, and not simply describe what you have learned
+	or what others have argued. At the tutorial, you should know what
+	you think about the question, and should be able to summarize the
+	argument of your essay in one sentence.
+
+	\item Reading preparation should always give priority of attention
+	to the assigned primary texts. Secondary literature will be
+	important in lending guidance to the essay, but scholarly opinions
+	should always be assessed on the basis of how helpful they are in
+	explaining the primary text.
+
+	\item By email or Teams, please send me your essay as a Microsoft
+	Word document by 4pm the day before class. Essays received on time
+	will receive written feedback. Late essays are not guaranteed
+	written feedback. If you do not provide an essay at all, class may
+	be cancelled. Essays will not be accepted after class (with rare
+	exceptions).
+
+	\item Written feedback will be returned by email or on Teams
+	following discussion in the tutorial. Marks will not be assigned to
+	the essays initially, and only in two cases later. Instead,
+	affirmation and redirection will be provided as needed.
+
+	\item Select two of your best essays to revise and resubmit for a
+	formal mark. Both essays must be submitted before the last day of
+	class. You can opt to submit them early.
 
 \end{enumerate}
 
-Note that this course is an intensive. Its format is highly condensed.
-In a two week period students are expected to attend 30 hours of class
-and to spend a further 50 hours \emph{or more} in independent study.
-Students are therefore encouraged not to have other major commitments
-during the course session so that they can have the best chance of
-success.
-
-The breakdown for the course's total work is shown in
+The breakdown for the semester's total work is shown in
 \autoref{grade-dist}.
 
 \begin{table}[htbp]
@@ -257,14 +260,68 @@ The breakdown for the course's total work is shown in
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Reading Responses  & 35\% \\
-    Annotated Articles & 20\% \\
-    Final Paper        & 45\% \\
+    Completion of All Essays      & 70\% \\
+    Assessment of Selected Essays & 30\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
   \label{grade-dist}
 \end{table}
+
+% Evaluation scheme from Summer 2017 intensive
+%
+%\begin{enumerate}% 200*7+250*8 = 3400 words, plus the annotated articles
+%
+%	\item Before each class, complete the assigned reading and write a
+%	200--250 word (one page) \textbf{reading response}. Use the exercise
+%	to elaborate, reflect on, test, challenge, or extend an idea from
+%	the reading that you find noteworthy. Type your responses, write in
+%	complete sentences, and combine those sentences into one or two
+%	healthy paragraphs. Due at the start of \textbf{each class}, unless
+%	it is the first class or another graded assignment is due. Students
+%	who submit fewer than 6 responses cannot earn an “A” for the course.
+%
+%	\item On one sheet of paper, annotate a list of between 7 and 12
+%	essential \textbf{articles of faith} that Christians associate with
+%	Old Testament scripture. For guidance on what counts as “essential”
+%	you may consult various catechisms (Catholic, Lutheran), creeds
+%	(Apostles', Nicene, New), and other official documents (Articles,
+%	Encyclicals, Statements). In your annotations, cite OT texts that
+%	seem to speak to each of the doctrines you select, whether for or
+%	against or both. Due at the start of \textbf{class four}.
+%
+%	\item A \textbf{final paper} allows you to explore one Christian
+%	Doctrine of your choice in terms of its relationship to Old
+%	Testament scripture. The paper must have a clear thesis and be at
+%	least 2,000 words (eight pages) long. It should interact with the
+%	assigned reading and cite at least four secondary sources in total.
+%	Due at the start of the \textbf{last class}.
+%
+%\end{enumerate}
+%
+%Note that this course is an intensive. Its format is highly condensed.
+%In a two week period students are expected to attend 30 hours of class
+%and to spend a further 50 hours \emph{or more} in independent study.
+%Students are therefore encouraged not to have other major commitments
+%during the course session so that they can have the best chance of
+%success.
+%
+%The breakdown for the course's total work is shown in
+%\autoref{grade-dist}.
+%
+%\begin{table}[htbp]
+%  \centering
+%  {\lining
+%  \begin{tabular}{lr}
+%    \toprule
+%    Reading Responses  & 35\% \\
+%    Annotated Articles & 20\% \\
+%    Final Paper        & 45\% \\
+%    \bottomrule
+%  \end{tabular}}
+%  \caption{Distribution of Grades}
+%  \label{grade-dist}
+%\end{table}
 
 \input{\policy/grades}
 \input{\policy/other}
