--- a/policy/other.tex
+++ b/policy/other.tex
@@ -1,4 +1,4 @@
-\ProvidesFile{other.tex}[2021/09/07 v2.8 -- Course policy]
+\ProvidesFile{other.tex}[2022/01/10 v2.9 -- Course policy]
 
 \section{Other Course Policy}
 \label{policy}
@@ -8,10 +8,14 @@ circumstances. Students must submit something before the deadline if
 they wish to receive credit. Unless I state otherwise, assignments are
 to be uploaded by 11:59 \PM\ (Atlantic) on the date indicated.
 
-Essay submissions must be typewritten, double-spaced, and formatted as
-PDFs. They should be free from error. In this course they should follow
-SBL Style (see \cite{sbl2} in \autoref{supplementary}, above). As a
-reminder, AST also upholds an Inclusive Language Policy.
+Essay submissions must be typewritten and double-spaced. They should be
+free from error. In this course they should follow SBL Style (see
+\cite{sbl2} in \autoref{supplementary}, above). As a reminder, AST
+upholds an Inclusive Language Policy. Please use gender-inclusive
+language when referring to human beings. Our traditions have different
+norms for speech about God; therefore, you are free to use
+non-gender-inclusive pronouns when referring to God.
+
 
 Plagiarism is the
 \href{http://www.eerdmans.com/Pages/Item/59043/Commentary-Statement.aspx}{failure}
@@ -23,8 +27,7 @@ unethical. Academic penalties for plagiarism at AST are serious, and may
 include failure of the course or even suspension of further studies.
 Unintentional plagiarism is considered plagiarism. AST's Plagiarism
 Policy is found under that heading in the Academic
-Calendar.\footnote{This paragraph is adapted from standard language
-provided by the Academic Dean's office.}
+Calendar.
 
 Students should request permission to record a class or lecture. If
 permission is granted, or if recordings are provided (as in the case of
@@ -35,7 +38,7 @@ If you have needs that require modifications to any aspect of this
 course, please consult with the instructor as soon as possible. Any
 documentation regarding disabilities that you wish to divulge to AST
 should be provided to the Registrar’s Office, where it will be kept in a
-confidential file.\footnotemark[1]
+confidential file.
 
 Finally, I encourage the conscientious use of laptops, tablets, and
 other technology in my classes. In classroom settings, realize that, as
