add B Levinson as Supplementary text

--- a/HB/HB 3113-Ten Commandments.tex
+++ b/HB/HB 3113-Ten Commandments.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2018 by Daniel R. Driver.
+% Copyright (c) 2022 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -135,6 +135,10 @@ course website.
     \emph{The Ten Commandments: A Short History of an Ancient Text}.
     New Haven: Yale University Press, 2014.
     \textsc{isbn} 978-0300178715.
+
+	\bibitem{Levinson} Bernard M. Levinson.
+	\emph{Legal Revision and Religious Renewal in Ancient Israel}.
+	Cambridge: Cambridge University Press, 2010.
 
 	\bibitem{VanHarn} Roger E. Van Harn, ed.
 	\emph{The Ten Commandments for Jews, Christians, and Others}.
