--- a/HB/HB 3113-Ten Commandments.tex
+++ b/HB/HB 3113-Ten Commandments.tex
@@ -128,30 +128,32 @@ course website.
 
 	\bibitem{BraatenSeitz} Carl E. Braaten and Christopher R. Seitz, eds.
 	\emph{I Am the Lord Your God: Christian Reflections on the Ten Commandments}.
-	Grand Rapids: Eerdmans, 2005.
-	\textsc{isbn} 978-0802828125.
+	Grand Rapids: Eerdmans, 2005.%\textsc{isbn} 978-0802828125.
 
 	\bibitem{Coogan} Michael Coogan.
     \emph{The Ten Commandments: A Short History of an Ancient Text}.
-    New Haven: Yale University Press, 2014.
-    \textsc{isbn} 978-0300178715.
+    New Haven: Yale University Press, 2014.%\textsc{isbn} 978-0300178715.
 
 	\bibitem{Levinson} Bernard M. Levinson.
 	\emph{Legal Revision and Religious Renewal in Ancient Israel}.
 	Cambridge: Cambridge University Press, 2010.
 
+	\bibitem{RevHoff} Yair Hoffman and Henning Graf Reventlow, eds.
+	\emph{The Decalogue in Jewish and Christian Tradition}.
+	LHBOTS 509. New York: T\&T Clark, 2011.
+
 	\bibitem{VanHarn} Roger E. Van Harn, ed.
 	\emph{The Ten Commandments for Jews, Christians, and Others}.
 	Grand Rapids: Eerdmans, 2007.
-	\textsc{isbn} 978-0802829658.
+	%\textsc{isbn} 978-0802829658.
 
 	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
-	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
+	3rd ed. Toronto: Oxford University Press, 2019. \textsc{isbn} 978-0199026838.
 
 	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
-	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
+	2nd ed. Atlanta: SBL Press, 2014. \textsc{isbn} 978-1589839649.
 	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{Chicago Style}}
 	(the standard at AST), there is also a free
 	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
