put tutorials policy in separate policy file

--- a/ST-cross/HBST 3001-Doctrine and the OT.tex
+++ b/ST-cross/HBST 3001-Doctrine and the OT.tex
@@ -210,63 +210,10 @@ the needs of the class.
 
 See the AST website for a list of other \href{http://www.astheology.ns.ca/students/academic-dates.html}{important dates}.
 
-\section{Evaluation and Grade Structure}
+\section{Evaluation}
 \label{evaluation}
 
-Given the small class size this term, I have adopted a tutorial format
-for \ccode.
-
-\begin{enumerate}
-
-	\item Each week you will write a 1000–1200 word essay responding to
-	a prompt.
-
-	\item Essays should interact thoughtfully with both primary and
-	secondary sources, and should be \textbf{thesis-driven}. Your essay
-	must argue a thesis, and not simply describe what you have learned
-	or what others have argued. At the tutorial, you should know what
-	you think about the question, and should be able to summarize the
-	argument of your essay in one sentence.
-
-	\item Reading preparation should always give priority of attention
-	to the assigned primary texts. Secondary literature will be
-	important in lending guidance to the essay, but scholarly opinions
-	should always be assessed on the basis of how helpful they are in
-	explaining the primary text.
-
-	\item By email or Teams, please send me your essay as a Microsoft
-	Word document by 4pm the day before class. Essays received on time
-	will receive written feedback. Late essays are not guaranteed
-	written feedback. If you do not provide an essay at all, class may
-	be cancelled. Essays will not be accepted after class (with rare
-	exceptions).
-
-	\item Written feedback will be returned by email or on Teams
-	following discussion in the tutorial. Marks will not be assigned to
-	the essays initially, and only in two cases later. Instead,
-	affirmation and redirection will be provided as needed.
-
-	\item Select two of your best essays to revise and resubmit for a
-	formal mark. Both essays must be submitted before the last day of
-	class. You can opt to submit them early.
-
-\end{enumerate}
-
-The breakdown for the semester's total work is shown in
-\autoref{grade-dist}.
-
-\begin{table}[htbp]
-  \centering
-  {\lining
-  \begin{tabular}{lr}
-    \toprule
-    Completion of All Essays      & 70\% \\
-    Assessment of Selected Essays & 30\% \\
-    \bottomrule
-  \end{tabular}}
-  \caption{Distribution of Grades}
-  \label{grade-dist}
-\end{table}
+\input{\policy/tutorials}
 
 % Evaluation scheme from Summer 2017 intensive
 %
